--- a/doc/clamsmtpd.conf
+++ b/doc/clamsmtpd.conf
@@ -52,4 +52,7 @@ Listen: 0.0.0.0:10025
 # farm vehicles through. Be sure you know what you're doing. !IMPORTANT!
 #VirusAction: /path/to/some/script.sh
 
+# STARTTLS support key & cert files
+#TLSKey: /path/to/file.key
+#TLSCert: /path/to/file.crt
 
